Bugfix/382015 go to resource popup page when zoom is set 300% (#73)
* feat: GTM tracking

* Fix for popup message not visible on page zoom 300%

* BUG 384419 - updated ai_session cookie expiry

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7569,7 +7569,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 600px;
+  width: 50%;
+  max-height: 65%;
 }
 
 .map-modal {
