--- a/src/assets/sass/components/_modal.scss
+++ b/src/assets/sass/components/_modal.scss
@@ -24,7 +24,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 600px;
+  width: 50%;
+  max-height: 65%;
 }
 
 .map-modal {
